# swedish

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yaml
.reuse/: dep5
approot/: strings.xml  template.xml  wt_config.xml  wt_config.xml.sample
cross/aarch64-linux-musl/: Dockerfile  toolchain.cmake
docroot/css/: style.css
docroot/js/: jscolor.js
scripts/: run.sh
src/: Application.cpp  Application.h  Direction.h  Dispatcher.cpp  Dispatcher.h  GlobalSession.cpp  GlobalSession.h  Layout.cpp  Layout.h  Rotation.h  SharedSession.cpp  SharedSession.h  UserCopy.h  main.cpp
src/jobs/: SquareFinder.cpp  SquareFinder.h
src/model/: Puzzle.cpp  Puzzle.h  Session.cpp  Session.h  Square.h  User.cpp  User.h
src/widgets/: ColorPicker.cpp  ColorPicker.h  PuzzleUploader.cpp  PuzzleUploader.h  PuzzleView.cpp  PuzzleView.h
